// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`define should add primitive values to definitions 1`] = `
Object {
  "process.env.NODE_ENV": "\\"production\\"",
  "process.env.SECOND": "true",
  "process.env.THIRD": "\\"THIRD\\"",
  "process.env.VALUE": "100",
}
`;

exports[`define should apply a plugin 1`] = `
Object {
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"production\\"",
      },
    },
  ],
  "target": Object {
    "name": "browsers",
    "value": "modern",
  },
}
`;

exports[`define should set a prefix for the every definition except NODE_ENV 1`] = `
Object {
  "custom_prefix.VALUE": "500",
  "process.env.NODE_ENV": "\\"production\\"",
}
`;
